# pyt

./: .editorconfig  .gitignore  AGENTS.md  README.md  mise.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: codeql.yml
src/azure-ai-102/: Makefile  README.md  mise.toml
src/azure-ai-102/agents/01-build-agent-portal-and-vscode/: agent_with_functions.py  pyproject.toml
src/azure-ai-102/agents/02-agent-custom-tools/: agent.py  functions.py  pyproject.toml
src/azure-ai-102/agents/02-build-ai-agent/: agent.py
src/azure-ai-102/agents/03-mcp-integration/: agent.py  client.py  pyproject.toml
src/azure-ai-102/agents/03-mpc-integration/: .env.example  client.py  server.py
src/azure-ai-102/agents/05-agent-orchestration/: .env.example  agents.py  pyproject.toml
src/azure-ai-102/agents/06-build-remote-agents-with-a2a/: .env.example
src/azure-ai-102/agents/07-agent-framework/: .env.example  agent-framework.py  pyproject.toml
src/azure-ai-102/dev/: README.md  pyproject.toml
src/azure-ai-102/genai/: mise.toml
src/azure-ai-102/genai/chat-app/: pyproject.toml
src/azure-ai-102/genai/foundry-chat/: chat-app.py  chat-async.py  pyproject.toml
src/azure-ai-102/genai/infra/: .terraform.lock.hcl  Makefile  README.md  main.tf  mise.toml  outputs.tf  variables.tf
src/azure-ai-102/genai/tools-app/: .env.example  pyproject.toml  tools-app.py
src/azure-ai-102/information-extraction/02-content-understanding-api/: .env.example  create-analyzer.py  pyproject.toml  read-card.py
src/azure-ai-102/information-extraction/04-knowledge-mining/: .env.example  pyproject.toml  search-app.py
src/azure-ai-102/information-extraction/05-rag-pipeline/: .env.example  create-analyzer.py  ingest-pipeline.py  pyproject.toml  rag-agent.py
src/azure-ai-102/infra/: .terraform.lock.hcl  README.md  backend.tfvars.example  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  tf-backend-setup.sh  variables.tf
src/project/automation-gpt/: requirements.txt
src/project/document-processing-docling/: .gitignore  Easy-OCR.py  Makefile  README.md  pyproject.toml
src/project/text-to-speech-kokoro/: .gitignore  Makefile  pyproject.toml
src/project/ytdlp-env/: Makefile  README.md  pyproject.toml  view-video.sh
(+38 files in other folders)
