[project]
name = "2026-04-17-nm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "azure-ai-contentunderstanding>=1.0.1",
    "azure-ai-language-questionanswering>=1.1.0",
    "azure-ai-projects>=2.0.1",
    "azure-ai-textanalytics>=5.4.0",
    "azure-ai-translation-text>=1.0.1",
    "azure-ai-vision-imageanalysis>=1.0.0",
    "azure-cognitiveservices-speech>=1.49.1",
    "azure-identity>=1.25.3",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.8",
    "mcp>=1.27.0",
    "openai>=2.32.0",
    "pillow>=12.2.0",
    "playsound3>=3.3.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "uvicorn>=0.44.0",
]
