[project]
name = "2026-04-17-nm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "a2a-sdk>=1.0.1",
  "agent-framework==1.0.0b260212",
  "aiohttp>=3.13.5",
  "azure-ai-agents>=1.1.0",
  "azure-ai-contentunderstanding>=1.0.1",
  "azure-ai-documentintelligence",
  "azure-ai-language-questionanswering",
  "azure-ai-projects>=2.0.1",
  "azure-ai-textanalytics>=5.4.0",
  "azure-ai-translation-text>=1.0.1",
  "azure-ai-vision-imageanalysis>=1.0.0",
  "azure-cognitiveservices-speech>=1.49.1",
  "azure-identity>=1.25.3",
  "azure-search-documents",
  "dotenv>=0.9.9",
  "fastapi>=0.136.0",
  "httpx>=0.28.1",
  "matplotlib>=3.10.8",
  "mcp>=1.27.0",
  "openai>=2.32.0",
  "opentelemetry-semantic-conventions-ai==0.4.13",
  "pillow>=12.2.0",
  "playsound3>=3.3.1",
  "python-dotenv>=1.2.2",
  "requests>=2.33.1",
  "sse-starlette>=3.3.4",
  "starlette>=1.0.0",
  "uvicorn>=0.44.0",
]
