[project]
name = "yt-dlp-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.14"
dependencies = [
    "brotli>=1.2.0",
    "certifi>=2026.2.25",
    "curl-cffi>=0.14.0",
    "mutagen>=1.47.0",
    "pycryptodome>=3.23.0",
    "requests>=2.33.1",
    "websockets>=16.0",
    "xattr>=1.3.0",
    "yt-dlp>=2026.3.17",
    "yt-dlp-ejs>=0.8.0",
]
